globus-common (15.27-1+gt6.@distro@) @distro@; urgency=low

  * Don't add empty entries in list_from_string

 -- Globus Toolkit <support@globus.org>  Thu, 18 Dec 2014 08:04:40 -0500

globus-common (15.26-5+gt6.@distro@) @distro@; urgency=low

  * Fix missing libglobus_thread_pthread.so in library package
  * put libglobus_memory_debug in library package

 -- Globus Toolkit <support@globus.org>  Thu, 30 Oct 2014 15:11:38 -0400

globus-common (15.26-3+gt6.@distro@) @distro@; urgency=low

  * GT-566: Debian packages look for configuration in /usr/etc and state in /usr/var

 -- Globus Toolkit <support@globus.org>  Mon, 20 October 2014 11:31:12 -0400

globus-common (15.26-2+gt6.@distro@) @distro@; urgency=low

  * Add libltdl-dev dependency

 -- Globus Toolkit <support@globus.org>  Wed, 08 October 2014 10:03:54 -0400

globus-common (15.26-1+gt6.@distro@) @distro@; urgency=low

  * Doxygen markup fixes
  * Fix typos and clarify some documentation

 -- Globus Toolkit <support@globus.org>  Tue, 30 Sep 2014 08:31:36 -0400

globus-common (15.25-1+gt6.@distro@) @distro@; urgency=low

  * Set GLOBUS_VERSION in bootstrap

 -- Globus Toolkit <support@globus.org>  Fri, 05 Sep 2014 16:30:44 -0400

globus-common (15.24-2+gt6.@distro@) @distro@; urgency=low

  * GT 6.0

 -- Globus Toolkit <support@globus.org>  Fri, 05 Sep 2014 12:43:16 -0400

globus-common (15.24-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:30 -0400

globus-common (15.23-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:40 -0400

globus-common (15.23-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:44 -0400

globus-common (15.23-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert
