@@ -1,6 +1,6 @@
 Name: globus-common
 Maintainer: Mattias Ellert <mattias.ellert@fysast.uu.se>
-Source: http://www.globus.org/ftppub/gt6/packages/globus_common-15.27.tar.gz
+Source: http://toolkit.globus.org/ftppub/gt6/packages/globus_common-15.28.tar.gz
 
 
 
