@@ -6,14 +6,14 @@
 
 Name:		globus-common
 %global _name %(tr - _ <<< %{name})
-Version:	15.27
-Release:	2%{?dist}
+Version:	15.28
+Release:	1%{?dist}
 Summary:	Globus Toolkit - Common Library
 
 Group:		System Environment/Libraries
 License:	ASL 2.0
-URL:		http://www.globus.org/
-Source:	http://www.globus.org/ftppub/gt6/packages/globus_common-15.27.tar.gz
+URL:		http://toolkit.globus.org/
+Source:	http://toolkit.globus.org/ftppub/gt6/packages/%{_name}-%{version}.tar.gz
 BuildRoot:	%{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 
 #		Obsolete dropped packages from Globus Toolkit 4.2.1
@@ -211,6 +211,9 @@ rm -rf $RPM_BUILD_ROOT
 %{_docdir}/%{name}-%{version}/html/*
 
 %changelog
+* Tue Apr 07 2015 Globus Toolkit <support@globus.org> - 15.28-1
+- Disable network tests when NO_EXTERNAL_NET is in the environment
+
 * Sat Mar 07 2015 Globus Toolkit <support@globus.org> - 15.27-2
 - move thread plugins to base
 
